--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -6,5 +6,11 @@
 </head>
 <body>
     Welcome to index page.
+    <div class="search">
+        <form action="/s/price">
+            <label for="lowPrice"><input id="lowPrice" name="lowPrice" type="text" placeholder="底线"/></label>
+            <label for="highPrice"><input id="highPrice" name="highPrice" type="text" placeholder="上限"/></label>
+        </form>
+    </div>
 </body>
 </html>
