--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -10,6 +10,7 @@
         <form action="/s/price">
             <label for="lowPrice"><input id="lowPrice" name="lowPrice" type="text" placeholder="底线"/></label>
             <label for="highPrice"><input id="highPrice" name="highPrice" type="text" placeholder="上限"/></label>
+            <input type="submit" value="submit">
         </form>
     </div>
 </body>
