--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -7,9 +7,17 @@
 <body>
     Welcome to index page.
     <div class="search">
-        <form action="/s/price">
+        <form action="/s/price" method="post">
             <label for="lowPrice"><input id="lowPrice" name="lowPrice" type="text" placeholder="底线"/></label>
             <label for="highPrice"><input id="highPrice" name="highPrice" type="text" placeholder="上限"/></label>
+            <input type="submit" value="submit">
+        </form>
+        <form action="/s/hId" method="post">
+            <label for="hId"><input id="hId" name="hId" type="text" placeholder="房源号"/></label>
+            <input type="submit" value="submit">
+        </form>
+        <form action="/s/commName" method="post">
+            <label for="commName"><input id="commName" name="commName" type="text" placeholder="小区名"/></label>
             <input type="submit" value="submit">
         </form>
     </div>
