api 基础服务上线

--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -12,11 +12,11 @@
             <label for="highPrice"><input id="highPrice" name="highPrice" type="text" placeholder="上限"/></label>
             <input type="submit" value="submit">
         </form>
-        <form action="/s/hId" method="post">
-            <label for="hId"><input id="hId" name="hId" type="text" placeholder="房源号"/></label>
+        <form action="/s/id" method="post">
+            <label for="id"><input id="id" name="id" type="text" placeholder="房源号"/></label>
             <input type="submit" value="submit">
         </form>
-        <form action="/s/commName" method="post">
+        <form action="/s/communityName" method="post">
             <label for="commName"><input id="commName" name="commName" type="text" placeholder="小区名"/></label>
             <input type="submit" value="submit">
         </form>
